Fixed exposed keys

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ PORT = 8080
 TWILIO_ACCOUNT_SID = AC744d95898964bf5e6eee09cb39fe9def
 
 TWILIO_AUTH_TOKEN = 77b2ce0cc25c01b8e70a0ea7f39a4e96
+
+CLIENT_ID = 761872814015-0baktgbiqjhoic794hfb4cqbhbjalgp8.apps.googleusercontent.com
+
+CLIENT_SECRET = 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
